compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__panic__bare.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/panic.rs
assertion_line: 5
expression: "\npub fn go() {\n  panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  panic
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
}
