compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__panic__bare_typescript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/panic.rs
assertion_line: 28
expression: "\npub fn go() {\n  panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  panic
}


----- TYPESCRIPT DEFINITIONS
export function go(): any;
