compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__panic__panic_as.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/panic.rs
assertion_line: 16
expression: "\npub fn go() {\n  let x = \"wibble\"\n  panic as x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  let x = "wibble"
  panic as x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  let x = "wibble";
  throw makeError("panic", FILEPATH, "my/mod", 4, "go", x, {})
}
