compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__panic__pipe.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/panic.rs
assertion_line: 51
expression: "\npub fn go(f) {\n  f |> panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(f) {
  f |> panic
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(f) {
  let _pipe = f;
  let _block;
  throw makeError(
    "panic",
    FILEPATH,
    "my/mod",
    3,
    "go",
    "`panic` expression evaluated.",
    {}
  )
  return _block(_pipe);
}
